stage 로직 정리